--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^5.9.4",
     "react": "16.8.3",
     "react-native": "0.59.3",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-vector-icons": "^6.4.2",
